--- a/GMSClient/Shared/NavMenu.razor
+++ b/GMSClient/Shared/NavMenu.razor
@@ -19,17 +19,17 @@
         </li>*@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="customers">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> مشتریان
+                <span class="oi oi-person" aria-hidden="true"></span> مشتریان
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="products">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> محصولات
+                <span class="oi oi-folder" aria-hidden="true"></span> محصولات
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="shiftpatterns">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> تنظیم الگوی شیفتها
+                <span class="oi oi-timer" aria-hidden="true"></span> تنظیم الگوی شیفتها
             </NavLink>
         </li>        
     </ul>
